@@ -1,3 +1,8 @@
+6/12/2009
+	- The TSIG verification routines (TSIG.verify,
+	  TSIG.StreamVerifier.verify() now update the Message object with the
+	  status of the verification in addition to returning the status.
+	
 6/03/2009
 	- The lists of servers and searchlist entries in ResolverConfig should
 	  not be static.
